--- a/resume/css/index.css
+++ b/resume/css/index.css
@@ -156,7 +156,7 @@ a {
 	width: 60px;
 	border-radius: 50%;
 	padding: 12px 0;
-	margin: 16px;
+	margin: 8px 16px;
 }
 
 .userCard > footer.media > a:hover{
