--- a/resume/css/index.css
+++ b/resume/css/index.css
@@ -15,6 +15,16 @@ a {
 	text-decoration: none;
 	color: inherit;
 }
+
+ol,
+ul {
+	list-style: none;
+}
+
+h1,h2,h3,h4,h5,h6 {
+	font-weight: normal;
+}
+
 .clearfix::after {
 	content: '';
 	display: block;
@@ -77,10 +87,16 @@ a {
 	background-color: rgba(0, 0, 0, 0.5);
 }
 
+/* main部分 */
+body> main {
+	margin-top: -340px;
+}
+
 .userCard{
 	max-width: 970px;
 	margin: 0 auto;
 	background-color: #fff; 
+	box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.5);
 }
 .userCard .pictrueAndText {
 	padding: 50px;
@@ -168,4 +184,143 @@ a {
 	height: 30px;
 	fill: #fff;
 	vertical-align: top;
+}
+main .buttonWrapper {
+	text-align: center;
+}
+
+main .buttonWrapper .button {
+	font-size: 14px;
+	line-height: 16px;
+	border: 1px solid #cdcfd1;
+	border-radius: 2px;
+	color: #3d4451;
+	font-weight: bold;
+	display: inline-block;
+	padding: 21px 55px;
+	margin: 32px 0;
+	transition: box-shadow 0.2s;
+}
+
+main .buttonWrapper .button:hover {
+	box-shadow: 0px 4px 13px 0px rgba(0, 0, 0, 0.2);
+  }
+
+.slefIntroduction {
+	font-family: KAITI;
+	max-width: 940px;
+	margin: 0 auto;
+	text-align: center;
+	font-size: 22px;
+	line-height: 1.8;
+}
+
+section.skills,
+section.portfolio {
+	max-width: 940px;
+	margin: 60px auto 0;
+}
+
+section.skills > h2,
+section.portfolio > h2 {
+	text-align: center;
+	color: #3d4451;
+	font-size: 34px;
+	line-height: 1.2;
+	font-weight: 600px;
+}
+
+section.skills > ol {
+	background: #fff;
+	box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.5);
+	padding: 42px 50px 10px;
+	margin-top: 30px;
+}
+
+section.skills > ol > li {
+	float: left;
+	width: 48%;
+}
+
+section.skills > ol > li:nth-child(even) {
+	float: right;
+}
+
+section.skills h3 {
+	font-size: 14px;
+}
+
+section.skills .progressBar {
+	height: 10px;
+	background: #FAE1E1;
+	border-radius: 2px;
+	margin: 4px 0 40px;
+}
+
+section.skills .progressBar > .progress {
+	height: 100%;
+	background: #E6686A;
+	width: 70%;
+	border-radius: 2px;
+}
+
+section.portfolio {
+	text-align: center;
+	margin-bottom: 100px;
+}
+
+section.portfolio > nav {
+	margin-top: 32px;
+	display: inline-block;
+    vertical-align: top;
+}
+section.portfolio > nav > ol {
+	display: inline-block;
+    vertical-align: top;
+	margin: 0 auto;
+}
+section.portfolio > nav > ol > li {
+	float: left;
+	margin-left: 40px;
+	cursor: pointer;
+}
+
+section.portfolio > nav > ol > li:first-child {
+	margin-left: 0;
+}
+
+section.portfolio > nav .bar {
+	height: 7px;
+	background: #fff;
+	margin-top: 5px;
+	margin-bottom: 28px;
+	border-radius: 3px;
+}
+
+section.portfolio > nav .bar-inner {
+	height: 100%;
+	background: #e6686a;
+	border-radius: 3px;
+	transition: all 0.3s;
+}
+
+section.portfolio > nav .bar.state-1 .bar-inner{
+	margin-left: 0;
+	width: 50px;
+}
+section.portfolio > nav .bar.state-2 .bar-inner{
+	margin-left: 65px;
+	width: 50px;
+}
+section.portfolio > nav .bar.state-3 .bar-inner{
+	margin-left: 140px;
+	width: 105px;
+}
+
+section.portfolio .works{
+	position: relative;
+}
+section.portfolio .works > .big,
+section.portfolio .works > .small {
+	position: absolute;
 }
