--- a/main.css
+++ b/main.css
@@ -321,6 +321,7 @@ section.portfolio {
 }
 
 section.skills > h2,
+section.message > h2,
 section.portfolio > h2 {
 	text-align: center;
 	color: #3d4451;
@@ -392,3 +393,15 @@ section.portfolio .swiper-button-prev {
 	height: 64px;
 	border-radius: 50%;
 }
+
+section.message > ol {
+	max-width: 700px;
+	margin: 0 auto;
+	background: #f4f4f4;
+}
+
+section.message > ol > li {
+	padding: 16px;
+	border-bottom: 1px solid #ddd;
+}
+
